<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.nightonke.blurlockviewsample.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/password_type"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <RadioGroup
                android:id="@+id/group_password_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:id="@+id/password_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_number"
                    android:checked="true"
                    />

                <RadioButton
                    android:id="@+id/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_text"
                    />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/show_duration"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                />

            <SeekBar
                android:id="@+id/show_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="0"
                />

            <TextView
                android:id="@+id/show_duration_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/show_direction"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                />

            <RadioGroup
                android:id="@+id/group_show_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/ease_type"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                />

            <RadioGroup
                android:id="@+id/group_ease_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            </RadioGroup>

            <CheckBox
                android:id="@+id/same_ease_type_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_same_ease_type_back"
                android:checked="false"
                />

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/go"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ok"
        android:scaleType="center"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        />

</FrameLayout>
